# re_tan

./: .gitignore  LICENSE  README.md  pyproject.toml  rename_subjects.py
.github/workflows/: tests.yml
src/re_tan/: name_helpers.py
tests/: test_anonymize.py  test_contains_both.py  test_main.py  test_split_path.py
