[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[project]
name = "re_tan"
version = "0.1.0"
description = "Anonymization utilities for patient identifiers"
authors = [
    {name="Sergey Kandabarau", email="kandabarau@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
